log
Thu 09 May 2024 03:48:22 PM UTC: 
 treemap.c | 33 ++++++++++++++++++++++++++++++---
 1 file changed, 30 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:64:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   64 |     TreeNode * parent = NULL;
      |                ^~~~~~
treemap.c: In function ‘nextTreeMap’:
treemap.c:114:1: error: control reaches end of non-void function [-Werror=return-type]
  114 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8953d94
Thu 09 May 2024 03:50:48 PM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:121:1: error: control reaches end of non-void function [-Werror=return-type]
  121 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b8beefe
Thu 09 May 2024 03:52:38 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
db6144f
Thu 09 May 2024 03:53:33 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:76:8: error: expected ‘(’ before ‘if’
   76 |     if if (tree->lower_than(newNode->pair->key, current->pair->key)){
      |        ^~
      |        (
treemap.c:76:8: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
   76 |     if if (tree->lower_than(newNode->pair->key, current->pair->key)){
      |        ^~
cc1: all warnings being treated as errors
Compilation failed
d258608
Thu 09 May 2024 03:53:38 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6a920be
